--- a/Manual/World's Largest Button.html
+++ b/Manual/World's Largest Button.html
@@ -96,7 +96,7 @@
 						<td>Hold the button when the last timer digit is 1.</td>
 					</tr>
 					<tr>
-						<td>Briefcase Close</td>
+						<td>Binder Drop</td>
 						<td>Hold the button when the last timer digit is 2.</td>
 					</tr>
 					<tr>
@@ -108,23 +108,23 @@
 						<td>Hold the button when the last timer digit is 4.</td>
 					</tr>
 					<tr>
-						<td>Button Release</td>
+						<td>Capacitor Pop</td>
 						<td>Hold the button when the last timer digit is 5.</td>
 					</tr>
 					<tr>
-						<td>Freeplay Device Drop</td>
+						<td>Menu Drop</td>
 						<td>Hold the button when the last timer digit is 6.</td>
 					</tr>
 					<tr>
-						<td>Menu Button Pressed</td>
+						<td>Stamp</td>
 						<td>Hold the button when the last timer digit is 7.</td>
 					</tr>
 					<tr>
-						<td>Menu Drop</td>
+						<td>Switch</td>
 						<td>Hold the button when the last timer digit is 8.</td>
 					</tr>
 					<tr>
-						<td>Stamp</td>
+						<td>Wire Snip</td>
 						<td>Hold the button when the last timer digit is 9.</td>
 					</tr>
 				</table>
